[project]
name = "ecom-imagegen"
version = "0.1.0"
description = "E-commerce product image generation platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "celery[redis]>=5.4",
    "redis>=5.0",
    "python-multipart>=0.0.9",
    "openai>=1.40",
    "google-genai>=1.0",
    "google-cloud-aiplatform>=1.60",
    "pillow>=10.0",
    "structlog>=24.0",
    "httpx>=0.27",
    "websockets>=12.0",
    "aiofiles>=25.0",
    "streamlit>=1.35",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 100
